@@ -1,1 +1,1 @@
-$colornewst -xform M154_03-03-11.xg -bin 1 -origin M154_03-03-11.rec M154_03-03-11_ali.mrc
+$colornewst -cnverbose -xform M154_03-03-11.xg -bin 1 -origin M154_03-03-11.rec M154_03-03-11_ali.mrc
